Ajustando responsividade da sessão de Segurança

--- a/engenharia.html
+++ b/engenharia.html
@@ -86,58 +86,74 @@
           </div>
           <hr style="border-color: var(--gray-300)" />
         </div>
-        <div
-          id="seguranca"
-          class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4"
-        >
-          <h1 class="fw-bolder text-gray-800 display-5 px-5 pt-5">
-            Segurança do Trabalho
-          </h1>
-          <div class="row g-0">
-            <div class="col d-flex flex-column px-5 pb-5">
-              <p>Conheça algumas de nossas especialidades:</p>
-              <ul class="list-services text-sm">
-                <li>PGR - Programa de Gerenciamento de Riscos;</li>
-                <li>
-                  LTCAT - Laudo Técnico das Condições Ambientais de Trabalho;
-                </li>
-                <li>Laudos técnicos de insalubridade e periculosidade;</li>
-                <li>PRE - Plano de Resposta à Emergências;</li>
-                <li>AET - Análise Ergonômica do Trabalho;</li>
-                <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
-                <li>Investigação e análise de acidentes do trabalho;</li>
-                <li>Inspeções de Segurança do Trabalho;</li>
-                <li>
-                  Envio de informações de SST ao e-Social (S-2240 e S-2210);
-                </li>
-                <li>Treinamentos nas normas regulamentadoras;</li>
-                <li>Acompanhamento em perícias;</li>
-                <li>Consultoria especializada.</li>
-              </ul>
-              <div class="d-flex align-items-center mt-auto mb-2">
-                <a
-                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                  class="btn btn-primary me-4"
-                  target="_blank"
-                  >Solicitar Proposta</a
+        <div class="row justify-content-center">
+          <div class="col-lg-8 col-xl">
+            <div
+              id="seguranca"
+              class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4 text-xl-start"
+            >
+              <h1
+                class="fw-bolder text-gray-800 display-5 px-3 px-sm-5 pt-4 pt-sm-5"
+              >
+                Segurança do Trabalho
+              </h1>
+              <div class="row g-0">
+                <div
+                  class="col-sm-auto d-flex flex-column justify-content-end px-3 px-sm-5 pb-4 pb-sm-5"
                 >
-                <div class="fs-6">
-                  <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone"></i>
+                  <p>Conheça algumas de nossas especialidades:</p>
+                  <ul class="list-services text-sm">
+                    <li>PGR - Programa de Gerenciamento de Riscos;</li>
+                    <li>
+                      LTCAT - Laudo Técnico das Condições Ambientais de
+                      Trabalho;
+                    </li>
+                    <li>Laudos técnicos de insalubridade e periculosidade;</li>
+                    <li>PRE - Plano de Resposta à Emergências;</li>
+                    <li>AET - Análise Ergonômica do Trabalho;</li>
+                    <li>CIPA - Comissão Interna de Prevenção de Acidentes;</li>
+                    <li>Investigação e análise de acidentes do trabalho;</li>
+                    <li>Inspeções de Segurança do Trabalho;</li>
+                    <li>
+                      Envio de informações de SST ao e-Social (S-2240 e S-2210);
+                    </li>
+                    <li>Treinamentos nas normas regulamentadoras;</li>
+                    <li>Acompanhamento em perícias;</li>
+                    <li>Consultoria especializada.</li>
+                  </ul>
+                  <div
+                    class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+                  >
+                    <div class="col-md-auto text-start">
+                      <div class="fs-5 me-md-5 me-xl-0">
+                        <span class="me-1">(37) 99988-1070</span>
+                        <i class="bi bi-telephone"></i>
+                      </div>
+                    </div>
+                    <div class="col-auto order-md-first">
+                      <a
+                        href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                        class="btn btn-primary me-md-5 me-xl-0"
+                        >Solicitar Proposta</a
+                      >
+                    </div>
+                    <div class="col-auto">
+                      <a
+                        href="mailto:gerencia.organizar@gmail.com"
+                        class="btn btn-outline-primary"
+                        >Dúvidas Técnicas</a
+                      >
+                    </div>
+                  </div>
                 </div>
-                <a
-                  href="mailto:gerencia.organizar@gmail.com"
-                  class="btn btn-outline-primary ms-auto"
-                  >Dúvidas Técnicas</a
-                >
+                <div class="col-xl text-end">
+                  <img
+                    src="images/seguranca.jpg"
+                    class="img-thumbnail-top"
+                    alt="Segurança do trabalho"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <img
-                src="images/seguranca.jpg"
-                class="img-thumbnail-top"
-                alt="Segurança do trabalho"
-              />
             </div>
           </div>
         </div>
