Ajustes finais de responsividade

--- a/engenharia.html
+++ b/engenharia.html
@@ -20,12 +20,9 @@
   <body>
     <header class="py-3 bg-gray-800 position-relative">
       <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-sm-auto">
-            <a
-              href="/"
-              class="d-inline-block text-decoration-none mb-2 mb-xl-0"
-            >
+        <div class="row gy-3 align-items-center justify-content-between">
+          <div class="col-sm-auto text-center">
+            <a href="/" class="d-inline-block mb-2 mb-xl-0">
               <img
                 src="images/logo.png"
                 alt="Organizar"
@@ -87,10 +84,10 @@
           <hr style="border-color: var(--gray-300)" />
         </div>
         <div class="row justify-content-center">
-          <div class="col-lg-8 col-xl">
+          <div class="col-md-10 col-lg-8 col-xl">
             <div
               id="seguranca"
-              class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4 text-xl-start"
+              class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4 text-sm-center text-xl-start"
             >
               <h1
                 class="fw-bolder text-gray-800 display-5 px-3 px-sm-5 pt-4 pt-sm-5"
@@ -99,7 +96,7 @@
               </h1>
               <div class="row g-0">
                 <div
-                  class="col-sm-auto d-flex flex-column justify-content-end px-3 px-sm-5 pb-4 pb-sm-5"
+                  class="col-xl d-flex flex-column px-3 px-md-5 pb-4 pb-sm-5"
                 >
                   <p>Conheça algumas de nossas especialidades:</p>
                   <ul class="list-services text-sm">
@@ -122,18 +119,18 @@
                     <li>Consultoria especializada.</li>
                   </ul>
                   <div
-                    class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+                    class="row g-3 align-items-center justify-content-md-between mt-auto"
                   >
-                    <div class="col-md-auto text-start">
-                      <div class="fs-5 me-md-5 me-xl-0">
+                    <div class="col-md-auto col-xl text-start">
+                      <a href="tel:+5537999881070" class="fs-6 text-gray-600">
                         <span class="me-1">(37) 99988-1070</span>
-                        <i class="bi bi-telephone"></i>
-                      </div>
+                        <i class="bi bi-telephone text-primary"></i>
+                      </a>
                     </div>
                     <div class="col-auto order-md-first">
                       <a
                         href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                        class="btn btn-primary me-md-5 me-xl-0"
+                        class="btn btn-primary"
                         >Solicitar Proposta</a
                       >
                     </div>
@@ -165,7 +162,7 @@
           class="row gy-4 justify-content-center align-items-center text-sm-center text-xl-start"
         >
           <div class="col-sm-auto col-xl order-xl-last">
-            <div class="px-3 px-sm-5">
+            <div class="px-3 px-xxl-5">
               <h1 class="fw-bolder text-gray-800 display-5">
                 Projetos de Incêndio
               </h1>
@@ -182,10 +179,13 @@
                 class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
               >
                 <div class="col-md-auto text-start">
-                  <div class="fs-5 me-md-5 me-xl-0">
+                  <a
+                    href="tel:+5537999881070"
+                    class="fs-6 me-md-5 me-xl-0 text-gray-600"
+                  >
                     <span class="me-1">(37) 99988-1070</span>
-                    <i class="bi bi-telephone"></i>
-                  </div>
+                    <i class="bi bi-telephone text-primary"></i>
+                  </a>
                 </div>
                 <div class="col-auto order-md-first">
                   <a
@@ -254,11 +254,14 @@
             <div
               class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
             >
-              <div class="col-md-auto text-start">
-                <div class="fs-5 me-md-5 me-xl-0">
+              <div class="col-md-auto col-xl text-start">
+                <a
+                  href="tel:+5537999881070"
+                  class="text-gray-600 fs-6 me-md-5 me-xl-0"
+                >
                   <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone"></i>
-                </div>
+                  <i class="bi bi-telephone text-primary"></i>
+                </a>
               </div>
               <div class="col-auto order-md-first">
                 <a
