Ajustando responsividade da página de execução

--- a/engenharia.html
+++ b/engenharia.html
@@ -20,7 +20,9 @@
   <body>
     <header class="py-3 bg-gray-800 position-relative">
       <div class="container">
-        <div class="row gy-3 align-items-center justify-content-between">
+        <div
+          class="row gy-2 gy-sm-0 align-items-center justify-content-center justify-content-lg-between"
+        >
           <div class="col-sm-auto text-center">
             <a href="/" class="d-inline-block mb-2 mb-xl-0">
               <img
@@ -31,7 +33,7 @@
               />
             </a>
           </div>
-          <div class="col-sm-auto order-xl-last">
+          <div class="col-sm-auto order-lg-last">
             <a
               href="https://parceiro.grupoorganizar.com.br/"
               class="button small from-center"
@@ -39,7 +41,7 @@
               <span>Seja um parceiro</span>
             </a>
           </div>
-          <div class="col-xl">
+          <div class="col-lg">
             <ul class="nav nav-centered mb-2 mb-xl-0">
               <li>
                 <a href="#seguranca" class="nav-link px-2"
