--- a/execucao.html
+++ b/execucao.html
@@ -20,46 +20,48 @@
   <body>
     <header class="py-3 bg-gray-800 position-relative">
       <div class="container">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-sm-auto">
-            <a
-              href="/"
-              class="d-inline-block text-decoration-none mb-2 mb-xl-0"
-            >
-              <img src="images/logo.png" alt="Organizar" height="85" />
+        <div
+          class="row gy-2 gy-sm-0 align-items-center justify-content-center justify-content-lg-between"
+        >
+          <div class="col-sm-auto text-center">
+            <a href="/" class="d-inline-block mb-2 mb-xl-0">
+              <img
+                src="images/logo.png"
+                alt="Organizar"
+                height="85"
+                class="page-logo"
+              />
             </a>
           </div>
-          <div class="col-sm-auto order-xl-last">
-            <button type="button" class="button small from-center">
+          <div class="col-sm-auto order-lg-last">
+            <a
+              href="https://parceiro.grupoorganizar.com.br/"
+              class="button small from-center"
+            >
               <span>Seja um parceiro</span>
-            </button>
+            </a>
           </div>
-          <div class="col-xl">
+          <div class="col-lg">
             <ul class="nav nav-centered mb-2 mb-xl-0">
               <li>
-                <a href="#seguranca" class="nav-link px-2">Diagnóstico</a>
+                <a href="#diagnostico" class="nav-link px-2">Diagnóstico</a>
               </li>
               <li>
-                <a href="#incendio" class="nav-link px-2">Instalação</a>
+                <a href="#instalacao" class="nav-link px-2">Instalação</a>
               </li>
               <li>
-                <a href="#ambiente" class="nav-link px-2">Manutenção</a>
+                <a href="#manutencao" class="nav-link px-2">Manutenção</a>
               </li>
             </ul>
           </div>
         </div>
       </div>
     </header>
-
     <section class="py-5rem hero-section">
       <div class="container">
         <div class="text-center" style="margin-bottom: 5rem">
-          <h1 class="display-4 fw-bold mb-0 text-gray-800">
-            Execução de sistemas de prevenção contra incêndio e pânico
-          </h1>
-          <p class="mb-4">
-            Protegendo o Presente, Construindo um Futuro Seguro!
-          </p>
+          <h1 class="display-4 fw-bold mb-0 text-gray-800">Execução</h1>
+          <p class="mb-4">Sistemas de prevenção contra incêndio e pânico</p>
           <div class="row">
             <div class="col">
               <h2 class="mb-0 text-success">10+</h2>
@@ -76,63 +78,75 @@
           </div>
           <hr style="border-color: var(--gray-300)" />
         </div>
-        <div
-          id="seguranca"
-          class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4"
-        >
-          <h1 class="fw-bolder text-gray-800 display-5 px-5 pt-5">
-            Diagnóstico
-          </h1>
-          <div class="row g-0">
-            <div class="col d-flex flex-column px-5 pb-5">
-              <ul class="list-services text-sm mt-4">
-                <li>Teste de funcionamento dos equipamentos de prevenção;</li>
-                <li>Quantificação de materiais;</li>
-                <li>Relação de sistemas avariados;</li>
-                <li>Relatório de não conformidades;</li>
-                <li>Plano de ação.</li>
-              </ul>
-              <div class="d-flex align-items-center mb-2 mt-auto">
-                <a
-                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                  class="btn btn-primary me-4"
-                  target="_blank"
-                  >Solicitar Proposta</a
+        <div class="row justify-content-center">
+          <div class="col-md-10 col-lg-8 col-xl">
+            <div
+              id="diagnostico"
+              class="card card-body bg-light shadow p-0 border-0 overflow-hidden rounded-4 text-sm-center text-xl-start"
+            >
+              <h1
+                class="fw-bolder text-gray-800 display-5 px-3 px-sm-5 pt-4 pt-sm-5"
+              >
+                Diagnóstico
+              </h1>
+              <div class="row g-0">
+                <div
+                  class="col-xl d-flex flex-column px-3 px-md-5 pb-4 pb-sm-5"
                 >
-                <div class="fs-6">
-                  <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone"></i>
+                  <ul class="list-services text-sm mt-4">
+                    <li>
+                      Teste de funcionamento dos equipamentos de prevenção;
+                    </li>
+                    <li>Quantificação de materiais;</li>
+                    <li>Relação de sistemas avariados;</li>
+                    <li>Relatório de não conformidades;</li>
+                    <li>Plano de ação.</li>
+                  </ul>
+                  <div
+                    class="row g-3 align-items-center justify-content-md-between mt-auto"
+                  >
+                    <div class="col-md-auto col-xl text-start">
+                      <a href="tel:+5537999881070" class="fs-6 text-gray-600">
+                        <span class="me-1">(37) 99988-1070</span>
+                        <i class="bi bi-telephone text-primary"></i>
+                      </a>
+                    </div>
+                    <div class="col-auto order-md-first">
+                      <a
+                        href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                        class="btn btn-primary"
+                        >Solicitar Proposta</a
+                      >
+                    </div>
+                    <div class="col-auto">
+                      <a
+                        href="mailto:gerencia.organizar@gmail.com"
+                        class="btn btn-outline-primary"
+                        >Dúvidas Técnicas</a
+                      >
+                    </div>
+                  </div>
                 </div>
-                <a
-                  href="mailto:gerencia.organizar@gmail.com"
-                  class="btn btn-outline-primary ms-auto"
-                  >Dúvidas Técnicas</a
-                >
+                <div class="col-xl text-end">
+                  <img
+                    src="images/diagnostico.jpg"
+                    class="img-thumbnail-top"
+                    alt="Diagnóstico"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="col">
-              <img
-                src="images/diagnostico.jpg"
-                class="img-thumbnail-top"
-                alt="Segurança do trabalho"
-              />
             </div>
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-gray-50 py-5rem" id="incendio">
+    <section class="bg-gray-50 py-5rem" id="instalacao">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
-            <img
-              src="images/instalacao.jpg"
-              alt="Incêndio"
-              class="img-thumbnail rounded-5 shadow"
-            />
-          </div>
-          <div class="col">
-            <div class="px-5">
+        <div
+          class="row gy-4 justify-content-center align-items-center text-sm-center text-xl-start"
+        >
+          <div class="col-sm-auto col-xl order-xl-last">
+            <div class="px-3 px-xxl-5">
               <h1 class="fw-bolder text-gray-800 display-5 mb-4">Instalação</h1>
               <ul class="list-services text-sm mb-4">
                 <li>Sinalização de emergência;</li>
@@ -142,31 +156,51 @@
                 <li>Hidrantes;</li>
                 <li>Sprinkler.</li>
               </ul>
-              <div class="d-flex align-items-center justify-content-between">
-                <a
-                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                  class="btn btn-primary"
-                  >Solicitar Proposta</a
-                >
-                <div class="fs-5">
-                  <span class="me-1">(37) 99988-1070</span>
-                  <i class="bi bi-telephone"></i>
+              <div
+                class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+              >
+                <div class="col-md-auto text-start">
+                  <a
+                    href="tel:+5537999881070"
+                    class="fs-6 me-md-5 me-xl-0 text-gray-600"
+                  >
+                    <span class="me-1">(37) 99988-1070</span>
+                    <i class="bi bi-telephone text-primary"></i>
+                  </a>
                 </div>
-                <a
-                  href="mailto:organizar.engenharia@gmail.com"
-                  class="btn btn-outline-primary"
-                  >Dúvidas Técnicas</a
-                >
+                <div class="col-auto order-md-first">
+                  <a
+                    href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                    class="btn btn-primary me-md-5 me-xl-0"
+                    >Solicitar Proposta</a
+                  >
+                </div>
+                <div class="col-auto">
+                  <a
+                    href="mailto:organizar.engenharia@gmail.com"
+                    class="btn btn-outline-primary"
+                    >Dúvidas Técnicas</a
+                  >
+                </div>
               </div>
             </div>
+          </div>
+          <div class="col-xl">
+            <img
+              src="images/instalacao.jpg"
+              alt="Instalação"
+              class="img-thumbnail rounded-5 shadow"
+            />
           </div>
         </div>
       </div>
     </section>
-    <section class="bg-gray-100 py-5rem" id="ambiente">
+    <section class="bg-gray-100 py-5rem" id="manutencao">
       <div class="container">
-        <div class="row align-items-center">
-          <div class="col">
+        <div
+          class="row gy-5 align-items-center justify-content-center text-sm-center text-xl-start"
+        >
+          <div class="col-sm-auto col-xl">
             <h1 class="fw-bolder text-gray-800 display-5 mb-4">Manutenção</h1>
             <ul class="list-services text-sm mb-4">
               <li>Sinalização de emergência;</li>
@@ -176,24 +210,35 @@
               <li>Hidrantes;</li>
               <li>Sprinkler.</li>
             </ul>
-            <div class="d-flex align-items-center">
-              <a
-                href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
-                class="btn btn-primary me-4"
-                >Solicitar Proposta</a
-              >
-              <div class="fs-5">
-                <span class="me-1">(37) 99988-1070</span>
-                <i class="bi bi-telephone"></i>
+            <div
+              class="row g-3 align-items-center justify-content-md-center justify-content-xl-between"
+            >
+              <div class="col-md-auto col-xl text-start">
+                <a
+                  href="tel:+5537999881070"
+                  class="text-gray-600 fs-6 me-md-5 me-xl-0"
+                >
+                  <span class="me-1">(37) 99988-1070</span>
+                  <i class="bi bi-telephone text-primary"></i>
+                </a>
               </div>
-              <a
-                href="mailto:ambiental.organizar@gmail.com"
-                class="btn btn-outline-primary ms-auto"
-                >Dúvidas Técnicas</a
-              >
+              <div class="col-auto order-md-first">
+                <a
+                  href="https://api.whatsapp.com/send?phone=+5537999881070&text=Ol%C3%A1,%20gostaria%20de%20solicitar%20uma%20proposta%20comercial."
+                  class="btn btn-primary me-md-5 me-xl-0"
+                  >Solicitar Proposta</a
+                >
+              </div>
+              <div class="col-auto">
+                <a
+                  href="mailto:organizar.engenharia@gmail.com"
+                  class="btn btn-outline-primary ms-auto"
+                  >Dúvidas Técnicas</a
+                >
+              </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-xl">
             <img
               src="images/manutencao-1.jpg"
               class="img-thumbnail"
@@ -253,6 +298,7 @@
       $("footer").owlCarousel({
         loop: true,
         autoplay: true,
+        margin: 16,
         autoplayTimeout: 3000,
         responsive: {
           0: {
