Ajustando link de redirecionamento do botão de parceiro na página inicial

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
               style="height: calc(2.5rem - 2px)"
           /></a>
         </nav>
-        <a href="#" class="btn from-center"><span>Seja um parceiro</span></a>
+        <a
+          href="https://parceiro.grupoorganizar.com.br/"
+          class="btn from-center"
+          ><span>Seja um parceiro</span></a
+        >
       </header>
       <img src="images/logo.png" alt="Organizar Engenharia" class="logo" />
       <main>
