Ajustando vh em dispositivos mobile

--- a/index.html
+++ b/index.html
@@ -208,6 +208,10 @@
           $(".show").removeClass("show");
         });
       }
+      document.documentElement.style.setProperty(
+        "--vh",
+        `${window.innerHeight * 0.01}px`
+      );
     </script>
   </body>
 </html>
