Ajustando SEO da página

--- a/engenharia.html
+++ b/engenharia.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Organizar Engenharia</title>
+    <title>Engenharia | Grupo Organizar</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +17,37 @@
     />
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Engenharia | Grupo Organizar" />
+    <meta
+      name="description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://www.grupoorganizar.com.br/engenharia.html"
+    />
+    <meta property="og:title" content="Engenharia |Grupo Organizar" />
+    <meta
+      property="og:description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <meta property="og:image" content="images/social.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://www.grupoorganizar.com.br/engenharia.html"
+    />
+    <meta property="twitter:title" content="Engenharia |Grupo Organizar" />
+    <meta
+      property="twitter:description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <meta property="twitter:image" content="images/social.jpg" />
   </head>
   <body>
     <header class="py-3 bg-gray-800 position-relative">
