--- a/index.html
+++ b/index.html
@@ -3,10 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Organizar Engenharia</title>
+    <title>Grupo Organizar</title>
     <link rel="stylesheet" href="css/home.css" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
     <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
+
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Grupo Organizar" />
+    <meta
+      name="description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.grupoorganizar.com.br" />
+    <meta property="og:title" content="Grupo Organizar" />
+    <meta
+      property="og:description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <meta property="og:image" content="images/social.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.grupoorganizar.com.br" />
+    <meta property="twitter:title" content="Grupo Organizar" />
+    <meta
+      property="twitter:description"
+      content="Especialistas nas áreas de Segurança do Trabalho, Meio Ambiente e Qualidade. Sempre pensando na satisfação de nossos clientes, o Grupo Organizar conta com uma equipe de técnicos e engenheiros especializados para cada área de atuação."
+    />
+    <meta property="twitter:image" content="images/social.jpg" />
   </head>
   <body>
     <section>
