--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Grupo Organizar</title>
     <link rel="stylesheet" href="css/home.css" />
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
-    <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
 
     <!-- Primary Meta Tags -->
     <meta name="title" content="Grupo Organizar" />
@@ -85,7 +83,7 @@
             style="--overlay-color: #14a6df"
           >
             <div class="image-wrapper">
-              <img src="images/home/loja/img-1.jpg" />
+              <img src="images/home/loja/img-1.webp" />
             </div>
             <h2 class="title">Loja Virtual</h2>
             <h3 class="subtitle">Visitar</h3>
@@ -100,7 +98,7 @@
           >
             <a href="engenharia.html">
               <div class="image-wrapper">
-                <img src="images/home/engenharia/img-1.jpg" />
+                <img src="images/home/engenharia/img-1.webp" />
               </div>
             </a>
             <h2 class="title">Engenharia</h2>
@@ -118,7 +116,7 @@
           >
             <a href="execucao.html">
               <div class="image-wrapper">
-                <img src="images/home/execucao/img-1.jpg" />
+                <img src="images/home/execucao/img-1.webp" />
               </div>
             </a>
             <h2 class="title">Execução</h2>
@@ -133,7 +131,7 @@
             style="--overlay-color: #ed1d23"
           >
             <div class="image-wrapper">
-              <img src="images/home/recarga/img-1.jpg" />
+              <img src="images/home/recarga/img-1.webp" />
             </div>
             <h2 class="title">Recarga</h2>
             <h3 class="subtitle">Visitar</h3>
@@ -162,6 +160,7 @@
       <img src="images/logos/logo-18.png" />
       <img src="images/logos/logo-19.jpg" />
     </footer>
+    <link rel="stylesheet" href="plugins/owl.carousel.min.css" />
     <script src="plugins/jquery.min.js"></script>
     <script src="plugins/owl.carousel.min.js"></script>
     <script>
@@ -205,7 +204,7 @@
         }
         $(".promo-title").text(el.data("title")).addClass("show");
         counter = (counter % Number(el.data("count"))) + 1;
-        const src = `images/home/${el.data("prefix")}/img-${counter}.jpg`;
+        const src = `images/home/${el.data("prefix")}/img-${counter}.webp`;
         el.addClass("show");
         $(".img-overlay")
           .css({ "--bg": el.data("color") })
